@@ -1,3 +1,8 @@
+2008-09-21  Ira Rosen  <irar@il.ibm.com>
+
+	PR tree-optimization/37539
+	* gcc.dg/vect/pr37539.c: New test.
+
 2008-09-20  Eric Botcazou  <ebotcazou@adacore.com>
 
 	PR rtl-optimization/33642
